--- a/usercard/package.json
+++ b/usercard/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "shards-react": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
