--- a/github-usercard-app/package.json
+++ b/github-usercard-app/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.19.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
