--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
+    "handle": "^1.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "semantic-ui-react": "^0.88.1"
+    "ref": "^1.3.5",
+    "semantic-ui-react": "^0.88.1",
+    "yarn": "^1.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
