--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "add": "^2.0.6",
+    "axios": "^0.19.0",
     "handle": "^1.0.0",
+    "list": "^2.0.18",
     "react": "^16.10.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
