--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@stardust-ui/react-component-ref": "^0.39.0",
     "axios": "^0.19.0",
     "json": "^9.0.6",
     "semantic-ui-react": "^0.88.1"
