--- a/react-github-user-card/package.json
+++ b/react-github-user-card/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
