--- a/react-github-user-card/package.json
+++ b/react-github-user-card/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0"
