--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^3.26.7",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "gulp": "^4.0.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-github-calendar": "^0.16.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
