--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-github-calendar": "^1.0.4",
+    "react-scripts": "3.4.0",
+    "react-tooltip": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
