--- a/github-user-card/package.json
+++ b/github-user-card/package.json
@@ -8,7 +8,7 @@
     "axios": "^0.19.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
