--- a/github-usercard/package.json
+++ b/github-usercard/package.json
@@ -12,6 +12,7 @@
     "less-watch-compiler": "^1.14.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
