--- a/github-usercard/package.json
+++ b/github-usercard/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "github-calendar": "^1.3.4",
     "less": "^3.11.1",
     "less-watch-compiler": "^1.14.6",
     "react": "^16.13.1",
