--- a/react-github-user-card/package.json
+++ b/react-github-user-card/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
+    "reactstrap": "^8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
