--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "github-calendar": "^2.2.7",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-dom": "^17.0.1",
