--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "github-calendar": "^2.2.1",
+    "bootstrap": "^4.6.0",
+    "github-calendar": "^2.2.7",
     "node-sass": "^4.14.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
